# levo

./: .gitignore  Cargo.toml  build.sh  readme.md
brotli-encoder/: Cargo.toml  readme.md
brotli-encoder/src/: main.rs
client-app/: .gitignore  Cargo.toml  my-component.wasm  readme.md
client-app/src/: lib.rs
clients/404-page/: build.sh  my_world.c  my_world.h
clients/404-page/src/: my-component.c
clients/c-client-app/: .gitignore  build.sh  my_world.c  my_world.h  readme.md
clients/c-client-app/src/: my-component.c
clients/go-client-app/: .gitignore  bindgen.sh  build.sh  my-component.go  readme.md
clients/go-client-app/my-world/: my-world.go  my-world_types.go  my_world.c  my_world.h
clients/go-client-app/src/: my-component.go
clients/rust-client-app/: Cargo.toml  build.sh  readme.md
clients/rust-client-app/src/: lib.rs
clients/rust-test-read-file/: .gitignore  Cargo.toml  build.sh  hello.txt  readme.md
clients/rust-test-read-file/src/: lib.rs
clients/rust-test-read-file/test-folder/private/: hello.txt
clients/rust-test-read-file/test-folder/public/: hello.txt
go-client-app/: go.mod  go.sh  main.component.wasm  main.embed.wasm  main.wasm  my-component.go  readme.md
go-client-app/my-world/: my-world.go  my_world.h
go-client-app/src/host/: host.c  host.go  host.h
go-client-app/src/my-world/: my_world.c
levo-client/: Cargo.toml  readme.md
levo-portal/: Cargo.toml  readme.md
levo-portal/src/: main.rs
levo-server/: .gitignore  Cargo.toml  config.toml  my-component-wasm.br  readme.md
levo-server/public/: 404.wasm
levo-server/src/: main.rs
levo-wasm-generator/: readme.md
levo-wasm-generator/src/: lib.rs
macroquad/: .gitignore  Cargo.toml
macroquad/guests/basic-shapes-example/: Cargo.toml  build.sh
macroquad/guests/basic-shapes-example/src/: lib.rs
macroquad/spec/: host.wit
macroquad/src/: main.rs
portal/: Cargo.toml  readme.md
portal/src/: main.rs  ui.rs
spec/: host.wit
