[package]
name = "levo-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "15.0.1", features = ["component-model"] }
wtransport = { git="https://github.com/BiagioFesta/wtransport", rev="e302784", default-features = false, features = ["dangerous-configuration", "quinn"] }
quinn = "0.10.1"
tracing = "0.1.37"
anyhow = "1.0.71"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.28.1", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
axum = "0.7.1"
rustls = "0.21.1"
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.2"
ring = "0.17.7"
brotlic = "0.8.1"