[package]
name = "levo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wtransport = "0.1.10"
tracing = "0.1.37"
anyhow = "1.0.71"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.28.1", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
axum = "0.7.1"
path-clean = "1.0.1"
