[package]
name = "macroquad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
wasmtime = { version = "15.0.1", features = ["component-model"] }
wasmtime-wasi = "15.0.1"
anyhow = "1.0.71"
async-trait = "0.1.77"