[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
webtransport = []

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "png",
  "x11",
] }
bevy_cosmic_edit = "0.15.3"

wasmtime = { version = "15.0.1", features = ["component-model"] }
wasmtime-wasi = "15.0.1"
wtransport = { version = "0.1.10", default-features = false, features = [
  "dangerous-configuration",
  "quinn",
] }
tracing = "0.1.37"
anyhow = "1.0.71"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { version = "1.28.1", default-features = false, features = [
  "macros",
  "fs",
  "rt-multi-thread",
] }
brotli = "3.4.0"

bevy-tokio-tasks = { git = "https://github.com/StaffEngineer/bevy-tokio-tasks", rev = "ae26781" }
bevy_prototype_lyon = "0.10"
url = "2.5.0"
clap = { version = "4.4.12", features = ["derive"] }
reqwest = "0.11.23"